--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
         display: flex;
         height: 450px;
         background-color: #ffffff;
-        padding: 5px;
+        padding: 10px;
         overflow-y:scroll;
+    }
+    .chat .items ul{
         list-style: none;
     }
 
@@ -80,9 +82,66 @@
                 <a class="btn btn-default google" href="#" role="button">Login Google</a>
             </div>
         </div>
-        <ul class="items bg-campo">
-            <li>Muestra</li>
-        </ul>
+        <div class="items bg-campo" >
+            <ul>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+                <li>Muestra</li>
+            </ul>
+        </div>
         <div class="control">
             <div class="input-group bg-campo">
                 <input type="text" class="form-control" id="exampleInputAmount" placeholder="Mensaje">
